--- a/app/src/main/res/layout/contact_tile.xml
+++ b/app/src/main/res/layout/contact_tile.xml
@@ -17,28 +17,48 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:paddingHorizontal="10dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
+            <LinearLayout
+                android:gravity="center_vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="name"
-                android:textStyle="bold"
-                android:id="@+id/txtname"
-                android:textColor="@color/black"
-                android:textSize="16dp"
-                 />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="name"
+                    android:textStyle="bold"
+                    android:id="@+id/txtname"
+                    android:textColor="@color/black"
+                    android:textSize="16dp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="+919517538030"
-                android:textStyle="bold"
-                android:id="@+id/txtphone"
-                android:textColor="@color/black"
-                android:textSize="15dp"
-               />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="+919517538030"
+                    android:textStyle="bold"
+                    android:id="@+id/txtphone"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"
+                    />
 
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_edit_24"
+                android:id="@+id/rvimageEdit"
+                android:layout_marginEnd="5dp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_delete_24"
+                android:id="@+id/rvImgDelete"
+                />
 
 
         </LinearLayout>
